# rexdr

./: .env  .gitignore  LICENSE.md  README.md  docker-compose.yml
config/: targets.yaml.example  zones.yaml.example
core-shared/: pyproject.toml
core-shared/rexdr_core/: __init__.py  ai_client.py  database.py  entity_store.py  entity_store_client.py  formula.py  identity.py  schemas.py  settings.py
core-shared/rexdr_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engines/asset_discovery/: Dockerfile  __init__.py  api.py  config.py  database.py  detections.py  entity.py  main.py  requirements.txt  scanner.py
engines/dns/: Dockerfile  rexdr_core-1.0.0-py3-none-any.whl
engines/entity_store/: Dockerfile  __init__.py  api.py  config.py  main.py  requirements.txt
engines/identity/: Dockerfile  __init__.py  api.py  config.py  database.py  detections.py  domain_snapshot.py  entity.py  main.py  requirements.txt
engines/network_flow/: Dockerfile  __init__.py  api.py  capture.py  config.py  database.py  detections.py  entity.py  inspector.py  main.py  requirements.txt
engines/response/: Dockerfile  __init__.py  ad_lockdown.py  api.py  config.py  database.py  forensic_triage.py  main.py  orchestrator.py  playbook_engine.py  (+2 more)
frontend/: .env.example  Dockerfile  index.html  package.json  vite.config.js
launcher/: __init__.py  config_writer.py  engine_manager.py  launcher_ui.py  requirements.txt  rexdr_launcher.py  targets_editor.py
nginx/: nginx.conf  proxy_params.conf  proxy_ws_params.conf
scripts/: prepare_build.ps1  prepare_build.sh
(+92 files in other folders)
